# homemade_arm

./: .gitignore  .gitmodules  README.md
CyberGear/: CyberGear.py  example.py
arm_v2_backpack2/: CMakeLists.txt  package.xml
arm_v2_backpack2/launch/: display.launch  gazebo.launch
arm_v2_backpack2/meshes/: base_link.STL  link3.STL  link4.STL  link6.STL  link7.STL
arm_v2_backpack2/urdf/: arm_v2_backpack2_mujoco.xml  translate.py
collector/: data_viewer.py  main_.py  motor_trace.py  npy_viewer.py  test_encoder.py  test_orbbec.py  test_realsense.py  trajectory_replay.py
collector/collector/: collector.py  collector.sh
collector/configs/: ave_arm_motor.json  ave_arm_servo.json  ave_arm_test copy.json  ave_arm_test.json
collector/easyrobot/easyrobot/encoder/: CMakeLists.txt  Cybergear.py  Cybergear_encoder.py  EndEffectortra.py  End_effector.py  Unitree.py  Unitree_encoder.py  angle.py  api.py  base.py  cybergear_encoder.py  test_encoder.py  unitree_encoder.py
collector/easyrobot/easyrobot/encoder/include/unitreeMotor/: unitreeMotor.h
simulation/meshes/: link1.STL  link2.STL  link5.STL
simulation/scripts/: MUJOCO_LOG.TXT  mujoco_test.py
simulation/urdf/: arm_v2_backpack2.csv  arm_v2_backpack2.urdf  arm_v2_backpack2_mujoco.xml
src/: .rosinstall.bak  CMakeLists.txt
src/arm_end_effector_interface/: EndGear.py  control.py  example.py  manual_control.py
src/arm_motor_interface/: CMakeLists.txt  package.xml
src/arm_motor_interface/motor_tools/GO-M8010-8/: CMakeLists.txt
src/arm_urdf_3/: CMakeLists.txt  package.xml
src/arm_urdf_v3/: CMakeLists.txt  (+1 more)
(+209 files in other folders)
